add bubble animation

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -52,6 +52,7 @@
             <circle cx="267" cy="267" r="267" fill="#FFA5BA" />
           </svg>
         </div>
+        <!--  -->
       </div>
       <div class="ice">
         <a href="#">
@@ -155,16 +156,24 @@
           </svg>
         </div>
       </div>
-      <div class="bubbles">
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
-        <div class="bubbles__bubble"></div>
+      <div class="burbujas">
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
+        <div class="burbujas__burbuja"></div>
       </div>
     </header>
   </body>
