--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -210,140 +210,193 @@ header {
 }
 
 /* bubbles */
-.bubbles__bubble {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  background-color: #FFFFFF;
-  opacity: 0.5;
-  position: relative;
+.burbujas {
+  opacity: 0.4;
+}
+.burbujas__burbuja {
   bottom: 0;
-  -webkit-animation-name: flotar;
-          animation-name: flotar;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  left: 2%;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-}
-.bubbles__bubble:nth-of-type(1) {
-  width: 100px;
-  position: relative;
-  height: 100px;
-  left: 1%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: #D41443;
-}
-.bubbles__bubble:nth-of-type(2) {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  left: 10%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: green;
-}
-.bubbles__bubble:nth-of-type(3) {
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  left: 20%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
+  border-radius: 50%;
   position: absolute;
-  background-color: yellow;
+  -webkit-animation: bubbles normal infinite;
+          animation: bubbles normal infinite;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
 }
-.bubbles__bubble:nth-of-type(4) {
+.burbujas__burbuja:nth-child(1) {
+  width: 40px;
+  height: 40px;
+  left: 1%;
+  -webkit-animation-duration: 5.1s;
+          animation-duration: 5.1s;
+  background-color: #FFFFFF;
+}
+.burbujas__burbuja:nth-child(2) {
   width: 70px;
   height: 70px;
-  left: 30%;
+  left: 3%;
+  -webkit-animation-duration: 5.5s;
+          animation-duration: 5.5s;
+  background-color: blue;
+}
+.burbujas__burbuja:nth-child(3) {
+  width: 20px;
+  height: 20px;
+  left: 8%;
   -webkit-animation-duration: 5s;
           animation-duration: 5s;
+  background-color: black;
+}
+.burbujas__burbuja:nth-child(4) {
+  width: 90px;
+  height: 90px;
+  left: 10%;
+  -webkit-animation-duration: 6.8s;
+          animation-duration: 6.8s;
+  background-color: red;
+}
+.burbujas__burbuja:nth-child(5) {
+  width: 70px;
+  height: 70px;
+  left: 20%;
+  -webkit-animation-duration: 3.8s;
+          animation-duration: 3.8s;
+  background-color: green;
+}
+.burbujas__burbuja:nth-child(6) {
+  width: 100px;
+  height: 100px;
+  left: 28%;
+  -webkit-animation-duration: 4.1s;
+          animation-duration: 4.1s;
+  background-color: yellow;
+}
+.burbujas__burbuja:nth-child(7) {
+  width: 60px;
+  height: 60px;
+  left: 35%;
+  -webkit-animation-duration: 3.2s;
+          animation-duration: 3.2s;
   background-color: brown;
 }
-.bubbles__bubble:nth-of-type(5) {
-  width: 45px;
-  height: 45px;
+.burbujas__burbuja:nth-child(8) {
+  width: 30px;
+  height: 30px;
+  left: 40%;
+  -webkit-animation-duration: 4.2s;
+          animation-duration: 4.2s;
+  background-color: #FFB8CA;
+}
+.burbujas__burbuja:nth-child(9) {
+  width: 200px;
+  height: 200px;
+  left: 42%;
+  -webkit-animation-duration: 4.8s;
+          animation-duration: 4.8s;
+  background-color: #FFFFFF;
+}
+.burbujas__burbuja:nth-child(10) {
+  width: 100px;
+  height: 100px;
   left: 50%;
   -webkit-animation-duration: 5s;
           animation-duration: 5s;
-  background-color: blue;
-}
-.bubbles__bubble:nth-of-type(6) {
-  width: 85px;
-  height: 85px;
-  left: 90%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: red;
-}
-.bubbles__bubble:nth-of-type(7) {
-  width: 85px;
-  height: 85px;
-  left: 75%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: violet;
-}
-.bubbles__bubble:nth-of-type(8) {
-  width: 30px;
-  height: 30px;
-  left: 65%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: green;
-}
-.bubbles__bubble:nth-of-type(9) {
-  width: 200px;
-  height: 200px;
-  border-radius: 100px;
-  left: 65%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
   background-color: yellow;
 }
-
-@-webkit-keyframes flotar {
+.burbujas__burbuja:nth-child(11) {
+  width: 30px;
+  height: 30px;
+  left: 55%;
+  -webkit-animation-duration: 4.4s;
+          animation-duration: 4.4s;
+  background-color: black;
+}
+.burbujas__burbuja:nth-child(12) {
+  width: 60px;
+  height: 60px;
+  left: 60%;
+  -webkit-animation-duration: 4.9s;
+          animation-duration: 4.9s;
+  background-color: red;
+}
+.burbujas__burbuja:nth-child(13) {
+  width: 20px;
+  height: 20px;
+  left: 69%;
+  -webkit-animation-duration: 4.3s;
+          animation-duration: 4.3s;
+  background-color: green;
+}
+.burbujas__burbuja:nth-child(14) {
+  width: 100px;
+  height: 100px;
+  left: 72%;
+  -webkit-animation-duration: 3.2s;
+          animation-duration: 3.2s;
+  background-color: yellow;
+}
+.burbujas__burbuja:nth-child(15) {
+  width: 60px;
+  height: 60px;
+  left: 80%;
+  -webkit-animation-duration: 4.6s;
+          animation-duration: 4.6s;
+  background-color: black;
+}
+.burbujas__burbuja:nth-child(16) {
+  width: 20px;
+  height: 20px;
+  left: 88%;
+  -webkit-animation-duration: 4.4s;
+          animation-duration: 4.4s;
+  background-color: green;
+}
+.burbujas__burbuja:nth-child(17) {
+  width: 100px;
+  height: 100px;
+  left: 90%;
+  -webkit-animation-duration: 4.6s;
+          animation-duration: 4.6s;
+  background-color: red;
+}
+@-webkit-keyframes bubbles {
   0% {
-    bottom: 0;
-    transform: translateX(0%) translateY(0%);
+    width: 0;
+    height: 0;
   }
   25% {
-    transform: translateX(20%) translateY(0%);
+    margin-left: 70px;
   }
-  50% {
-    transform: translateX(0%) translateY(0%);
+  35% {
+    transform: translateY(90px);
+    transform: translateX(20px);
   }
-  75% {
-    transform: translateX(0%) translateY(0%);
+  45% {
+    margin-right: 0px;
+    transform: translateY(90px);
+    transform: translateX(10px);
   }
   100% {
-    opacity: 0.9%;
-    transform: translateX(0%) translateY(0%);
     bottom: 100vh;
   }
 }
-
-@keyframes flotar {
+@keyframes bubbles {
   0% {
-    bottom: 0;
-    transform: translateX(0%) translateY(0%);
+    width: 0;
+    height: 0;
   }
   25% {
-    transform: translateX(20%) translateY(0%);
+    margin-left: 70px;
   }
-  50% {
-    transform: translateX(0%) translateY(0%);
+  35% {
+    transform: translateY(90px);
+    transform: translateX(20px);
   }
-  75% {
-    transform: translateX(0%) translateY(0%);
+  45% {
+    margin-right: 0px;
+    transform: translateY(90px);
+    transform: translateX(10px);
   }
   100% {
-    opacity: 0.9%;
-    transform: translateX(0%) translateY(0%);
     bottom: 100vh;
   }
 }/*# sourceMappingURL=judith.css.map */
