--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -34,6 +34,7 @@ header
         margin-left: 360px
     &__img
         margin-top: 37px
+
     &__link--pink2
         margin-top: 54px
         color: $pink2
@@ -167,94 +168,130 @@ header
     &__svg
         margin-top: 20px
 /* bubbles */
-.bubbles
-    &__bubble
-        width: 100px
-        height: 100px
-        border-radius: 50px
-        background-color: $whithe
-        opacity: .5
-        position: relative
+.burbujas
+    opacity: .4
+    &__burbuja
         bottom: 0
-        animation-name: flotar
-        animation-duration: 5s
-        left: 2%
-        animation-iteration-count: infinite
-        animation-direction: normal
-
-    &__bubble:nth-of-type(1)
-        width: 100px
-        position: relative
-        height: 100px
-        left: 1%
-        animation-duration: 5s
-        background-color: $pink2
-    &__bubble:nth-of-type(2)
-        position: relative
-        width: 30px
-        height: 30px
-        left: 10%
-        animation-duration: 5s
-        background-color: green
-    &__bubble:nth-of-type(3)
-        width: 200px
-        height: 200px
-        border-radius: 100px
-        left: 20%
-        animation-duration: 5s
+        border-radius: 50%
         position: absolute
-        background-color: yellow
-    &__bubble:nth-of-type(4)
+        animation: bubbles normal infinite
+        animation-duration: 10s
+    &__burbuja:nth-child(1)
+        width: 40px
+        height: 40px
+        left: 1%
+        animation-duration: 5.1s
+        background-color: $whithe
+    &__burbuja:nth-child(2)
         width: 70px
         height: 70px
-        left: 30%
-        animation-duration: 5s
-        background-color: brown
-    &__bubble:nth-of-type(5)
-        width: 45px
-        height: 45px
-        left: 50%
-        animation-duration: 5s
+        left: 3%
+        animation-duration: 5.5s
         background-color: blue
-    &__bubble:nth-of-type(6)
-        width: 85px
-        height: 85px
-        left: 90%
+    &__burbuja:nth-child(3)
+        width: 20px
+        height: 20px
+        left: 8%
         animation-duration: 5s
+        background-color: black
+    &__burbuja:nth-child(4)
+        width: 90px
+        height: 90px
+        left: 10%
+        animation-duration: 6.8s
         background-color: red
-    &__bubble:nth-of-type(7)
-        width: 85px
-        height: 85px
-        left: 75%
-        animation-duration: 5s
-        background-color: violet
-    &__bubble:nth-of-type(8)
+    &__burbuja:nth-child(5)
+        width: 70px
+        height: 70px
+        left: 20%
+        animation-duration: 3.8s
+        background-color: green
+    &__burbuja:nth-child(6)
+        width: 100px
+        height: 100px
+        left: 28%
+        animation-duration: 4.1s
+        background-color: yellow
+    &__burbuja:nth-child(7)
+        width: 60px
+        height: 60px
+        left: 35%
+        animation-duration: 3.2s
+        background-color: brown
+    &__burbuja:nth-child(8)
         width: 30px
         height: 30px
-        left: 65%
-        animation-duration: 5s
-        background-color: green
-    &__bubble:nth-of-type(9)
+        left: 40%
+        animation-duration: 4.2s
+        background-color: $pink1
+    &__burbuja:nth-child(9)
         width: 200px
         height: 200px
-        border-radius: 100px
-        left: 65%
+        left: 42%
+        animation-duration: 4.8s
+        background-color: $whithe
+    &__burbuja:nth-child(10)
+        width: 100px
+        height: 100px
+        left: 50%
         animation-duration: 5s
         background-color: yellow
+    &__burbuja:nth-child(11)
+        width: 30px
+        height: 30px
+        left: 55%
+        animation-duration: 4.4s
+        background-color: black
+    &__burbuja:nth-child(12)
+        width: 60px
+        height: 60px
+        left: 60%
+        animation-duration: 4.9s
+        background-color: red
+    &__burbuja:nth-child(13)
+        width: 20px
+        height: 20px
+        left: 69%
+        animation-duration: 4.3s
+        background-color: green
+    &__burbuja:nth-child(14)
+        width: 100px
+        height: 100px
+        left: 72%
+        animation-duration: 3.2s
+        background-color: yellow
+    &__burbuja:nth-child(15)
+        width: 60px
+        height: 60px
+        left: 80%
+        animation-duration: 4.6s
+        background-color: black
+    &__burbuja:nth-child(16)
+        width: 20px
+        height: 20px
+        left: 88%
+        animation-duration: 4.4s
+        background-color: green
+    &__burbuja:nth-child(17)
+        width: 100px
+        height: 100px
+        left: 90%
+        animation-duration: 4.6s
+        background-color: red
+    @keyframes bubbles
+        0%
+            width: 0
+            height: 0
+        25%
+            margin-left: 70px
 
-@keyframes flotar
-    0%
+        35%
+            transform: translateY(90px)
+            transform: translateX(20px)
+        45%
+            margin-right: 0px
+            transform: translateY(90px)
+            transform: translateX(10px)
+        100%
 
-        bottom: 0
-        transform: translateX(0%) translateY(0%)
-    25%
-        transform: translateX(20%) translateY(0%)
-    50%
-        transform: translateX(0%) translateY(0%)
-    75%
-        transform: translateX(0%) translateY(0%)
-    100%
-
-        opacity: .9%
-        transform: translateX(0%) translateY(0%)
-        bottom: 100vh
+            bottom: 100vh
