change colo bubble

--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -219,182 +219,172 @@ header {
   position: absolute;
   -webkit-animation: bubbles normal infinite;
           animation: bubbles normal infinite;
-  -webkit-animation-duration: 10s;
-          animation-duration: 10s;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
 }
 .burbujas__burbuja:nth-child(1) {
   width: 40px;
   height: 40px;
   left: 1%;
-  -webkit-animation-duration: 5.1s;
-          animation-duration: 5.1s;
+  -webkit-animation-duration: 9.1s;
+          animation-duration: 9.1s;
   background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(2) {
-  width: 70px;
-  height: 70px;
+  width: 80px;
+  height: 80px;
   left: 3%;
-  -webkit-animation-duration: 5.5s;
-          animation-duration: 5.5s;
-  background-color: blue;
+  -webkit-animation-duration: 18s;
+          animation-duration: 18s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(3) {
   width: 20px;
   height: 20px;
   left: 8%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: black;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(4) {
-  width: 90px;
-  height: 90px;
+  width: 50px;
+  height: 50px;
   left: 10%;
-  -webkit-animation-duration: 6.8s;
-          animation-duration: 6.8s;
-  background-color: red;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(5) {
   width: 70px;
   height: 70px;
   left: 20%;
-  -webkit-animation-duration: 3.8s;
-          animation-duration: 3.8s;
-  background-color: green;
+  -webkit-animation-duration: 9s;
+          animation-duration: 9s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(6) {
   width: 100px;
   height: 100px;
   left: 28%;
-  -webkit-animation-duration: 4.1s;
-          animation-duration: 4.1s;
-  background-color: yellow;
+  -webkit-animation-duration: 11s;
+          animation-duration: 11s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(7) {
   width: 60px;
   height: 60px;
   left: 35%;
-  -webkit-animation-duration: 3.2s;
-          animation-duration: 3.2s;
-  background-color: brown;
+  -webkit-animation-duration: 9.2s;
+          animation-duration: 9.2s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(8) {
   width: 30px;
   height: 30px;
   left: 40%;
-  -webkit-animation-duration: 4.2s;
-          animation-duration: 4.2s;
-  background-color: #FFB8CA;
+  -webkit-animation-duration: 5.2s;
+          animation-duration: 5.2s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(9) {
   width: 200px;
   height: 200px;
   left: 42%;
-  -webkit-animation-duration: 4.8s;
-          animation-duration: 4.8s;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
   background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(10) {
   width: 100px;
   height: 100px;
   left: 50%;
-  -webkit-animation-duration: 5s;
-          animation-duration: 5s;
-  background-color: yellow;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(11) {
   width: 30px;
   height: 30px;
   left: 55%;
-  -webkit-animation-duration: 4.4s;
-          animation-duration: 4.4s;
-  background-color: black;
+  -webkit-animation-duration: 6s;
+          animation-duration: 6s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(12) {
   width: 60px;
   height: 60px;
   left: 60%;
-  -webkit-animation-duration: 4.9s;
-          animation-duration: 4.9s;
-  background-color: red;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(13) {
   width: 20px;
   height: 20px;
   left: 69%;
-  -webkit-animation-duration: 4.3s;
-          animation-duration: 4.3s;
-  background-color: green;
+  -webkit-animation-duration: 9s;
+          animation-duration: 9s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(14) {
   width: 100px;
   height: 100px;
   left: 72%;
-  -webkit-animation-duration: 3.2s;
-          animation-duration: 3.2s;
-  background-color: yellow;
+  -webkit-animation-duration: 11s;
+          animation-duration: 11s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(15) {
   width: 60px;
   height: 60px;
   left: 80%;
-  -webkit-animation-duration: 4.6s;
-          animation-duration: 4.6s;
-  background-color: black;
+  -webkit-animation-duration: 9s;
+          animation-duration: 9s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(16) {
   width: 20px;
   height: 20px;
   left: 88%;
-  -webkit-animation-duration: 4.4s;
-          animation-duration: 4.4s;
-  background-color: green;
+  -webkit-animation-duration: 14s;
+          animation-duration: 14s;
+  background-color: #FFFFFF;
 }
 .burbujas__burbuja:nth-child(17) {
   width: 100px;
   height: 100px;
   left: 90%;
-  -webkit-animation-duration: 4.6s;
-          animation-duration: 4.6s;
-  background-color: red;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+  background-color: #FFFFFF;
 }
 @-webkit-keyframes bubbles {
-  0% {
-    width: 0;
-    height: 0;
+  5% {
+    margin-left: 8px;
+    transform: translateX(4px);
+  }
+  10% {
+    transform: translateX(30px);
   }
   25% {
-    margin-left: 70px;
-  }
-  35% {
-    transform: translateY(90px);
-    transform: translateX(20px);
-  }
-  45% {
     margin-right: 0px;
-    transform: translateY(90px);
-    transform: translateX(10px);
+    transform: translateX(-90px);
   }
   100% {
     bottom: 100vh;
   }
 }
 @keyframes bubbles {
-  0% {
-    width: 0;
-    height: 0;
+  5% {
+    margin-left: 8px;
+    transform: translateX(4px);
+  }
+  10% {
+    transform: translateX(30px);
   }
   25% {
-    margin-left: 70px;
-  }
-  35% {
-    transform: translateY(90px);
-    transform: translateX(20px);
-  }
-  45% {
     margin-right: 0px;
-    transform: translateY(90px);
-    transform: translateX(10px);
+    transform: translateX(-90px);
   }
   100% {
     bottom: 100vh;
