--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -175,123 +175,123 @@ header
         border-radius: 50%
         position: absolute
         animation: bubbles normal infinite
-        animation-duration: 10s
+        animation-duration: 2s
     &__burbuja:nth-child(1)
         width: 40px
         height: 40px
         left: 1%
-        animation-duration: 5.1s
+        animation-duration: 9.1s
         background-color: $whithe
     &__burbuja:nth-child(2)
-        width: 70px
-        height: 70px
+        width: 80px
+        height: 80px
         left: 3%
-        animation-duration: 5.5s
-        background-color: blue
+        animation-duration: 18s
+        background-color: $whithe
     &__burbuja:nth-child(3)
         width: 20px
         height: 20px
         left: 8%
-        animation-duration: 5s
-        background-color: black
+        animation-duration: 6s
+        background-color: $whithe
     &__burbuja:nth-child(4)
-        width: 90px
-        height: 90px
+        width: 50px
+        height: 50px
         left: 10%
-        animation-duration: 6.8s
-        background-color: red
+        animation-duration: 5s
+        background-color: $whithe
     &__burbuja:nth-child(5)
         width: 70px
         height: 70px
         left: 20%
-        animation-duration: 3.8s
-        background-color: green
+        animation-duration: 9s
+        background-color: $whithe
     &__burbuja:nth-child(6)
         width: 100px
         height: 100px
         left: 28%
-        animation-duration: 4.1s
-        background-color: yellow
+        animation-duration: 11s
+        background-color: $whithe
     &__burbuja:nth-child(7)
         width: 60px
         height: 60px
         left: 35%
-        animation-duration: 3.2s
-        background-color: brown
+        animation-duration: 9.2s
+        background-color: $whithe
     &__burbuja:nth-child(8)
         width: 30px
         height: 30px
         left: 40%
-        animation-duration: 4.2s
-        background-color: $pink1
+        animation-duration: 5.2s
+        background-color: $whithe
     &__burbuja:nth-child(9)
         width: 200px
         height: 200px
         left: 42%
-        animation-duration: 4.8s
+        animation-duration: 7s
         background-color: $whithe
     &__burbuja:nth-child(10)
         width: 100px
         height: 100px
         left: 50%
-        animation-duration: 5s
-        background-color: yellow
+        animation-duration: 10s
+        background-color: $whithe
     &__burbuja:nth-child(11)
         width: 30px
         height: 30px
         left: 55%
-        animation-duration: 4.4s
-        background-color: black
+        animation-duration: 6s
+        background-color: $whithe
     &__burbuja:nth-child(12)
         width: 60px
         height: 60px
         left: 60%
-        animation-duration: 4.9s
-        background-color: red
+        animation-duration: 5s
+        background-color: $whithe
     &__burbuja:nth-child(13)
         width: 20px
         height: 20px
         left: 69%
-        animation-duration: 4.3s
-        background-color: green
+        animation-duration: 9s
+        background-color: $whithe
     &__burbuja:nth-child(14)
         width: 100px
         height: 100px
         left: 72%
-        animation-duration: 3.2s
-        background-color: yellow
+        animation-duration: 11s
+        background-color: $whithe
     &__burbuja:nth-child(15)
         width: 60px
         height: 60px
         left: 80%
-        animation-duration: 4.6s
-        background-color: black
+        animation-duration: 9s
+        background-color: $whithe
     &__burbuja:nth-child(16)
         width: 20px
         height: 20px
         left: 88%
-        animation-duration: 4.4s
-        background-color: green
+        animation-duration: 14s
+        background-color: $whithe
     &__burbuja:nth-child(17)
         width: 100px
         height: 100px
         left: 90%
-        animation-duration: 4.6s
-        background-color: red
+        animation-duration: 7s
+        background-color: $whithe
     @keyframes bubbles
         0%
-            width: 0
-            height: 0
-        25%
-            margin-left: 70px
 
-        35%
-            transform: translateY(90px)
-            transform: translateX(20px)
-        45%
+        5%
+            margin-left: 8px
+            transform: translateX(4px)
+
+        10%
+
+            transform: translateX(30px)
+        25%
             margin-right: 0px
-            transform: translateY(90px)
-            transform: translateX(10px)
+
+            transform: translateX(-90px)
         100%
 
             bottom: 100vh
