add links, add hover buttons

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -77,7 +77,7 @@
         <a href="#">
           <img class="ice__img" src="/src/images/big-ice.png" alt="" />
         </a>
-        <a href="#">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
           <img class="ice__img" src="/src/images/girl.png" alt="" />
         </a>
       </div>
