--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -77,6 +77,9 @@ header {
   text-align: left;
   margin-top: 40px;
 }
+.nav__button:hover {
+  transform: translateY(-10px);
+}
 .nav__span {
   font-family: "DM Sans", sans-serif;
   font-size: 16px;
@@ -131,6 +134,9 @@ header {
   color: #FFFFFF;
   margin-right: 12px;
 }
+.content__button:hover {
+  transform: translateY(-5px);
+}
 .content__button--whithe {
   width: 138px;
   height: 40px;
@@ -142,6 +148,9 @@ header {
   font-weight: 400;
   line-height: 18px;
   color: #D41443;
+}
+.content__button--whithe:hover {
+  transform: translateY(-5px);
 }
 
 .group {
@@ -207,6 +216,11 @@ header {
 }
 .group-2__svg {
   margin-top: 20px;
+}
+.group-2__svg:hover {
+  margin-left: 2px;
+  scale: 1.1;
+  transform: rotate(90deg);
 }
 
 /* bubbles */
