--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -53,6 +53,8 @@ header
         background-color: $whithe
         text-align: left
         margin-top: 40px
+    &__button:hover
+        transform: translateY(-10px)
     &__span
         font-family: $font-sans
         font-size: 16px
@@ -99,6 +101,8 @@ header
         font-weight: 400
         color: $whithe
         margin-right: 12px
+    &__button:hover
+        transform: translateY(-5px)
     &__button--whithe
         width: 138px
         height: 40px
@@ -110,7 +114,8 @@ header
         font-weight: 400
         line-height: 18px
         color: $pink2
-
+    &__button--whithe:hover
+        transform: translateY(-5px)
 .group
     margin-left: 1280px
 
@@ -164,9 +169,13 @@ header
         font-family: $font-sans
         font-size: 14px
         line-height: 20px
-
     &__svg
         margin-top: 20px
+    &__svg:hover
+        margin-left: 2px
+        scale: 1.1
+        transform: rotate(90deg)
+
 /* bubbles */
 .burbujas
 
