--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/sass/judith.css" />
-    <title>Ice cream</title>
+    <title>Ice Cream</title>
   </head>
   <body>
     <header>
