--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -61,6 +61,7 @@ header {
 .nav__link {
   margin-top: 54px;
   color: #FFFFFF;
+  justify-content: space-around;
 }
 .nav__link:hover {
   color: #D41443;
@@ -219,7 +220,7 @@ header {
 }
 .group-2__svg:hover {
   margin-left: 2px;
-  scale: 1.1;
+  scale: 1.5;
   transform: rotate(90deg);
 }
 
