hice lo que pude con el responsive

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/sass/judith.sass" />
     <link rel="stylesheet" href="/src/sass/judith.css" />
     <title>Ice Cream</title>
   </head>
@@ -78,7 +80,7 @@
           <img class="ice__img" src="/src/images/big-ice.png" alt="" />
         </a>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-          <img class="ice__img" src="/src/images/girl.png" alt="" />
+          <img class="ice__img--girl" src="/src/images/girl.png" alt="" />
         </a>
       </div>
       <!--  -->
