--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -1,4 +1,5 @@
 @import './_variables'
+
 *
     box-sizing: border-box
     text-decoration: none
@@ -28,6 +29,7 @@ header
 .nav
     display: flex
     justify-content: space-around
+
     &__elipse
         position: absolute
         margin-top: 75px
@@ -308,3 +310,71 @@ header
         100%
 
             bottom: 100vh
+@media only screen and ( max-width:600px )
+    .nav
+        float: left
+    .nav__elipse
+        scale: 60%
+        margin-right: 160px
+    .nav__link
+        display: none
+    .nav__link--pink2
+        display: none
+    .nav__button
+        display: none
+    .nav__img
+        margin-top: 10px
+        margin-left: 40px
+    .ice
+        position: absolute
+        margin-left: 130px
+        margin-top: 107px
+    .ice__img--girl
+        display: none
+    .group-1
+        display: none
+    .group-2__p
+        display: none
+    .group-2__img
+        display: none
+    .group-2__svg
+        display: none
+    .content
+        margin-top: 160px
+@media only screen and ( max-width:768px )
+    .nav
+        float: left
+    .nav__elipse
+        scale: 99%
+        height: 30%
+        margin-right: 200px
+    .nav__link
+        display: none
+    .nav__link--pink2
+        display: none
+    .nav__button
+        margin-left: 300px
+
+    .nav__img
+        margin-top: 10px
+        margin-left: 40px
+    .ice
+        position: absolute
+        margin-left: 380px
+        margin-top: 107px
+    .ice__img--girl
+        display: none
+    .group-1
+        display: none
+    .group-2__p
+        margin-left: 90px
+    .group-2__img
+        display: none
+    .group-2__svg
+        display: none
+    .content
+        margin-top: 160px
+@media only screen and ( max-width:1200px )
+    .nav
+        width: 100vh
+    .group-1__numbers
