--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,18 @@
-@import './common';
-@import './example';
+@import './base/reset';
+
+@import './base/common';
+@import './base/container';
+// @import './base/section';
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/footer';
+@import './layout/main';
+
+@import './components/theme-change';
+@import './components/mobile-menu';
+@import './components/modal-coctails';
+@import './components/modal-ingred';
+
+@import './favorite/favorite';
+
