--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,7 +1,28 @@
 .container {
     width: 100%;
     margin: 0 auto;
+    padding-right: 20px;
+    padding-left: 20px;
+    
+
+@media screen and (min-width: 480px) {
+    width: 480px;
+    }
+
+
+@media screen and (min-width: 768px) {
+    width: 768px;
+    padding-right: 32px;
+    padding-left: 32px;
+}
+
+
+@media screen and (min-width: 1280px) {
+    width: 1280px;
     padding-right: 16px;
     padding-left: 16px;
+}
 
 }
+
+
