--- a/src/partials/favorite/favorite-ingred.html
+++ b/src/partials/favorite/favorite-ingred.html
@@ -37,11 +37,11 @@
             <h3 class="f-ing_subtitle">Vermouth</h3>
             <p class="f-ing_text">fortified wine</p>
             <div class="f-ing_btn">
-                <button type="button" сlass="btn-add">
+                <button type="button" сlass="f-ing_btn-add">
                     <p>Learn More</p>
                 </button>
 
-                <button type="button" сlass="btn-rem">
+                <button type="button" сlass="f-ing_btn-rem">
                     <p>Remove</p>
                 </button>
             </div>
