--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,9 +3,12 @@
             <div class="hero__container">
                 <div class="hero__keyboard keyboard">
                     <h1 class="hero__title">A party without cocktails is not like a party</h1>
-                    <div>
-                        <img class="hero__img" src="#" alt="Amazing cocktail">
-                    </div>
+                    <!-- <picture>
+                        <source srcset="./images/ 1x, ./images/ 2x" media="(min-width:1200px)" />
+                        <source srcset="./images/.png 1x, ./images/tab@2x.png 2x" media="(min-width:768px)" />
+                        <source srcset="./images/.png 1x, ./images/mob@2x.png 2x" media="(min-width:480px)" />
+                        <img class="hero__img" src="./images/.png" alt="Amaizing cocktail" />
+                    </picture> -->
                     <p class="hero__text">Search your favorite cocktail by ABC</p>
                     <div class="keyboard__list">
                         <ul class="first--line">
