--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,10 +1,27 @@
 .hero {
     background-color: #FCFCFC;
-    padding: 30px 0px;
+    padding-top: 30px;
+    padding-bottom: 20px;
     max-width: 1280px;
     margin-left: auto;
     margin-right: auto;
 
+    @media screen and (min-width: 768px) {
+        padding-top: 66px;
+        padding-bottom: 30px;
+   
+    }
+        
+    @media screen and (min-width: 1280px) {
+        padding-top: 48px;
+        padding-bottom: 96px;
+        
+    }
+
+}
+
+.hero__img{
+    margin-bottom: 28px;
 }
 
 .hero__keyboard{
@@ -14,17 +31,20 @@
 
 .hero__title {
     width: 300px;
+    margin-bottom: 28px;
    
     font-weight: 600;
     font-size: 22px;
     line-height: 1.91;
     color: #FD5103;
 
+
     @media screen and (min-width: 768px) {
         width: 336px;
         font-weight: 600;
         font-size: 26px;
         line-height: 1.62;
+        margin-bottom: 40px;
 
         }
 
@@ -33,6 +53,7 @@
             font-weight: 600;
             font-size: 52px;
             line-height: 1.54;
+           
       
         }
 
@@ -40,6 +61,7 @@
 
 .hero__text{
     width: 280px;
+    margin-bottom: 20px;
 
     font-weight: 500;
     font-size: 14px;
@@ -51,7 +73,9 @@
 
     @media screen and (min-width: 768px) {
         width: 324px;
+        margin-bottom: 40px;
         color: #202025;
+
     
         }
     
