--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,29 +1,41 @@
 .hero {
+    position: relative;
+    width: 100%;
     background-color: #FCFCFC;
     padding-top: 30px;
     padding-bottom: 20px;
-    max-width: 1280px;
     margin-left: auto;
     margin-right: auto;
 
     @media screen and (min-width: 768px) {
-        padding-top: 66px;
-        padding-bottom: 30px;
+        padding-top: 102px;
+        padding-bottom: 164px;
    
     }
         
     @media screen and (min-width: 1280px) {
-        padding-top: 48px;
-        padding-bottom: 96px;
+        padding-top: 67px;
+       
         
     }
 
 }
 
-.hero__img{
+.hero__img {
     margin-bottom: 28px;
-}
 
+    @media screen and (min-width: 768px) {
+        position: absolute;
+        top: 38px;
+        right: 32px;
+        z-index: 5;
+    }
+
+    @media screen and (min-width: 1280px) {
+        top: 7px;
+        right: 16px;
+    }
+}
 
 .hero__title {
     width: 300px;
@@ -135,9 +147,3 @@
     gap: 1px;
 }
 
-.hero__img{
-    position: absolute;
-    top: 0;
-    right: 0;
-    
-}
