--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -98,14 +98,7 @@
 .keyboard__list{
     @media screen and (min-width: 768px) {
         display: inline-block;
-    
-    
     }
-    @media screen and (min-width: 768px) {
-     
-    
-    }
-    
 }
 
 .keyboard--item{
@@ -135,6 +128,14 @@
     }
 
 }
+.keyboard--item:hover,
+.keyboard--item:focus{
+    color: #FD5103;
+}
+
+// .keyboard--item:active{
+//     color: #202025;
+// }
 
 .first--line,
 .second--line,
