Markup and styles for Header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,30 +5,27 @@
     </a>
     <nav class="header__nav--desktop nav">
       <a class="nav__link" href="./">Home</a>
-      <p class="nav__link">
-        Favorite<span>
-          <svg class="form__img" width="17px" height="10px">
-            <!-- <use href=""></use> -->
-          </svg>
-        </span>
-      </p>
-      <ul class="nav__links is-hidden">
-        <li><a href="#">Favorite cocktails</a></li>
-        <li><a href="#">Favorite ingredients</a></li>
+      <p class="nav__link js-nav__link--desk">Favorite</p>
+      <ul class="nav__links nav__links--desktop is-hidden">
+        <li class="nav__item--top">
+          <a href="./fav-coctails.html">Favorite cocktails</a>
+        </li>
+        <li class="nav__item--bottom">
+          <a href="./fav-ingredients.html">Favorite ingredients</a>
+        </li>
       </ul>
     </nav>
     <form class="header__form--tablet">
       <input placeholder="Search" class="form__input" type="text" />
       <button class="form__btn" type="submit">
         <svg class="form__img" width="18px" height="18px">
-          <!-- <use href=""></use> -->
+          <use href="./img/sprite.svg#icon-search"></use>
         </svg>
       </button>
     </form>
     <button type="button" class="header__burger">
-      =
-      <svg class="burger__img" width="30px" height="16px">
-        <!-- <use href=""></use> -->
+      <svg class="burger__img" width="47px" height="39px">
+        <use href="./img/sprite.svg#icon-menu"></use>
       </svg>
     </button>
     <div class="header__switcher--desktop">
