--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -3,9 +3,8 @@
     <img src="./images/Logo.png" alt="logo" class="logo__image" />
   </a>
   <button type="button" class="header__cross">
-    x
-    <svg class="cross__img" width="18px" height="18px">
-      <!-- <use href=""></use> -->
+    <svg class="cross__img" width="47px" height="39px">
+      <use href="./img/sprite.svg#icon-modal-cross"></use>
     </svg>
   </button>
   <div class="header__switcher">
@@ -20,22 +19,25 @@
     <input placeholder="Search" class="form__input" type="text" />
     <button class="form__btn" type="submit">
       <svg class="form__img" width="18px" height="18px">
-        <!-- <use href=""></use> -->
+        <use href="./img/sprite.svg#icon-search"></use>
       </svg>
     </button>
   </form>
   <nav class="header__nav nav">
     <a class="nav__link" href="./">Home</a>
-    <p class="nav__link">
-      Favorite<span>
-        <svg class="form__img" width="17px" height="10px">
-          <!-- <use href=""></use> -->
-        </svg>
-      </span>
+    <p class="nav__link nav__menu js-nav__link--mobil">
+      Favorite
+      <svg class="nav__img" width="40px" height="30px">
+        <use href="./img/sprite.svg#icon-mdi-light_chevron-down"></use>
+      </svg>
     </p>
-    <ul class="nav__links is-hidden">
-      <li><a href="#">Favorite cocktails</a></li>
-      <li><a href="#">Favorite ingredients</a></li>
+    <ul class="nav__links is-hidden nav__links--mobil">
+      <li class="nav__item--top">
+        <a href="./fav-coctails.html">Favorite cocktails</a>
+      </li>
+      <li class="nav__item--bottom">
+        <a href="./fav-ingredients.html">Favorite ingredients</a>
+      </li>
     </ul>
   </nav>
 </div>
