--- a/src/partials/modal-coctails.html
+++ b/src/partials/modal-coctails.html
@@ -1,9 +1,11 @@
 <div class="backdrop__cocktail">
+    
   <div class="modal__cocktail">
+
         <button type="button" class="btn--close" data-modal="close-cocktail">
-        <svg width="32" height="32" data-modal="close-cocktail">
-            <use href=" " data-modal="close-cocktail"></use>
-        </svg>
+            <svg width="32" height="32" data-modal="close-cocktail">
+                <use href=" " data-modal="close-cocktail"></use>
+            </svg>
         </button>
         <div class="modal__form">
             <h2 class="cocktail__name">Negroni</h2>
@@ -14,14 +16,14 @@
             ice cubes. Garnish with an orange peel.
             </p>
             <div class="image__wrap">
-                <img
+                <!-- <img
                 class="cocktail__img"
                 alt="Rum Runner"
                 src="https://www.thecocktaildb.com/images/media/drink/vqws6t1504888857.jpg"
                 loading="lazy"
-                />
+                /> -->
             </div>
-            <h4 class="cocktail__title">INGREDIENTS</h4>
+            <h4 class="recipe__title">INGREDIENTS</h4>
             <p class="cocktail__text">Per cocktail</p>
             <ul class="ingredient">
                 <li class="ingredient__item">
