--- a/src/sass/components/_modal-coctails.scss
+++ b/src/sass/components/_modal-coctails.scss
@@ -1,44 +1,44 @@
 .backdrop__cocktail {
     width: 100%;
     height: 100%;
-    background: var(--background-color);
+    background: #00000080;
     position: fixed;
     top: 0;
-    left: 0;
+    // left: 0;
 }
 
-.modal-form {
-    text-align: center;
-    display: flex;
+
+
+.modal__cocktail {
+    background: #fff;
+    overflow: overlay;
     flex-direction: column;
-   
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 1px 3px #0000001f, 0 1px 1px #00000024, 0 2px 1px #0003;
 }
 
 .image__wrap {
-    width: 280px;
-    height: 280px;
+    // width: 280px;
+    // height: 280px;
+    border-radius: 4px;
+    margin-bottom: 22px;
 }
 
 .modal__cocktail {
-    // background: var(--modal-bg-color);
-    // overflow: overlay;
-    // flex-direction: column;
-    // justify-content: space-between;
-    // display: flex;
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    // box-shadow: 0 1px 3px #0000001f, 0 1px 1px #00000024, 0 2px 1px #0003;
-    
+       
     min-width: 320px;
-    height: 956px;
+    // height: 956px;
 
     padding-top: 40px;
     padding-bottom: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    width: 100%;
+    
     
 }
 
@@ -54,4 +54,85 @@
     position: absolute;
     top: 12px;
     right: 12px;
+}
+
+.cocktail__name {
+    font-family: 'Roboto';
+    font-style: normal;
+    margin-bottom: 20px;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 1.18;
+    text-align:left;
+    letter-spacing: 0.03em;
+    color: #202025;
+    
+}
+
+.cocktail__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #202025;
+}
+.ingredient,
+.recipe__text {
+   font-family: 'Poppins';
+    font-style: normal;
+    margin-bottom: 32px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.75;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #5F6775;
+}
+.recipe__title {
+   font-family: 'Poppins';
+    font-style: normal;
+    margin-bottom: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #000917;
+
+}
+
+.cocktail__text {
+    font-family: 'Poppins';
+    font-style: normal;
+    margin-bottom: 8px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #202025;
+}
+
+.modal__btn {
+    min-width: 185;
+    height: 48px;
+    // margin-right: auto;
+    // margin-left: auto;
+    background: #FD5103;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: white;
+    border: transparent;
+
+    
+}
+
+.ingredient__accent {
+    color:#000917;
 }
