--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -185,6 +185,7 @@ input:checked + .slider:before {
   font-size: 28px;
   line-height: 0.86;
   color: #000000;
+  cursor: pointer;
 }
 
 .header__nav--desktop {
