--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,7 +1,7 @@
 
   <div class="description__backdrop">
   <div class="container description">
-    <button class="button__close" type="button">X</button>
+    <button class="button__close" type="button"><svg><use>X</use></svg></button>
     <h2 class="description__title">Campari</h2>
     <h3 class="description__category">Liqueur</h3>
     <p class="description__characteristic">
@@ -11,10 +11,10 @@
       characterised by its dark red colour.
     </p>
     <ul class="description__item">
-      <li class="description__list">✶ Type: Bitters</li>
-      <li class="description__list">✶ Country of origin: Italy</li>
-      <li class="description__list">✶ Alcohol by volume: 20.5–28.5%</li>
-      <li class="description__list">✶ Flavour: Bitter, spicy and sweet</li>
+      <li class="description__list"><span class="description__accent">&#10038</span> Type: Bitters</li>
+      <li class="description__list"><span class="description__accent">&#10038</span> Country of origin: Italy</li>
+      <li class="description__list"><span class="description__accent">&#10038</span> Alcohol by volume: 20.5–28.5%</li>
+      <li class="description__list"><span class="description__accent">&#10038</span> Flavour: Bitter, spicy and sweet</li>
     </ul>
     <button class="description__favorite button" type="button">Remove from favorite</button>
   </div>
