--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,7 +1,9 @@
 
-  <div class="description__backdrop">
+  
+  <section class="modal__description visually-hidden">
+    <div class="description__backdrop">
   <div class="container description">
-    <button class="button__close" type="button"><svg><use>X</use></svg></button>
+    <button class="button__close" type="button"><svg width="18" height="18"><use href="./img/sprite.svg#icon-modal-cross"></use></svg></button>
     <h2 class="description__title">Campari</h2>
     <h3 class="description__category">Liqueur</h3>
     <p class="description__characteristic">
@@ -19,5 +21,4 @@
     <button class="description__favorite button" type="button">Remove from favorite</button>
   </div>
   </div>
-
 </section>
