--- a/src/partials/modal-coctails.html
+++ b/src/partials/modal-coctails.html
@@ -4,7 +4,7 @@
 
         <button type="button" class="btn--close" data-modal="close-cocktail">
             <svg width="32" height="32" data-modal="close-cocktail">
-                <use href=" " data-modal="close-cocktail"></use>
+                <use href="./img/sprite.svg#icon-modal-cross" data-modal="close-cocktail"></use>
             </svg>
         </button>
         <div class="modal__form">
@@ -28,7 +28,7 @@
             <ul class="ingredient">
                 <li class="ingredient__item">
                     <span class="ingredient__accent">&#10038</span>
-                    <span>Ice</span> 
+                    <!-- <span>Ice</span>  -->
                     <a class="link ingredient-link" data-type="" data-name="Ice">Ice</a>
                 </li>
                 <li class="ingredient__item">
