--- a/src/sass/components/_modal-coctails.scss
+++ b/src/sass/components/_modal-coctails.scss
@@ -4,9 +4,19 @@
     background: #00000080;
     position: fixed;
     top: 0;
+    overflow-y: scroll;
     // left: 0;
 }
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.9);
+}
 
+.backdrop.is-hidden {
+    visibility: hidden;
+    opacity: 0%;
+    pointer-events: none;
+
+}
 
 
 .modal__cocktail {
@@ -20,6 +30,21 @@
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 1px 3px #0000001f, 0 1px 1px #00000024, 0 2px 1px #0003;
+    min-width: 320px;
+    // height: 956px;
+    
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    @media screen and (min-width: 768px) {
+        width: 822px;
+        height: 598px;
+
+        padding-right: 32px;
+        padding-left: 32px;
+    }
+
 }
 
 .image__wrap {
@@ -29,21 +54,9 @@
     margin-bottom: 22px;
 }
 
-.modal__cocktail {
-       
-    min-width: 320px;
-    // height: 956px;
-
-    padding-top: 40px;
-    padding-bottom: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    
-    
-}
 
 .btn--close {
-    fill: var(--accent-color);
+    fill: #202025;
     background-color: #0000;
     border: #0000;
     justify-content: flex-end;
