Add some script for header and search from input

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,8 +15,13 @@
         </li>
       </ul>
     </nav>
-    <form class="header__form--tablet">
-      <input placeholder="Search" class="form__input" type="text" />
+    <form class="header__form--tablet js-form-desktop">
+      <input
+        placeholder="Search"
+        name="input"
+        class="form__input"
+        type="text"
+      />
       <button class="form__btn" type="submit">
         <svg class="form__img" width="18px" height="18px">
           <use href="./img/sprite.svg#icon-search"></use>
