--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -15,8 +15,8 @@
     </label>
     <span class="header__dark">Dark</span>
   </div>
-  <form class="header__form form">
-    <input placeholder="Search" class="form__input" type="text" />
+  <form class="header__form form js-form-mobil">
+    <input placeholder="Search" name="input" class="form__input" type="text" />
     <button class="form__btn" type="submit">
       <svg class="form__img" width="18px" height="18px">
         <use href="./img/sprite.svg#icon-search"></use>
