added cursor pointer

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -6,8 +6,6 @@ body {
     margin: 0;
 }
 
-
-
 a {
     color: currentColor;
     text-decoration: none;
@@ -26,5 +24,6 @@ a {
     overflow: hidden;
 }
 
-
-
+button {
+    cursor: pointer;
+}
