--- a/src/partials/favorite/favorite-ingred.html
+++ b/src/partials/favorite/favorite-ingred.html
@@ -8,27 +8,32 @@
             <h3 class="f-ing_subtitle">Campari</h3>
             <p class="f-ing_text">Liqueur</p>
 
-            <div class="f-ing_btn">
-                <button type="button" сlass="f-ing_btn-add">
-                    <p>Learn More</p>
-                </button>
 
-                <button type="button" сlass="f-ing_btn-rem">
-                    <p>Remove</p>
+            <div class="f-ing_btn">
+                <button type="button" class="f-ing_btn-add">Learn More</button>
+
+
+                <button type="button" class="f-ing_btn-rem">Remove
+                    <svg width="25px" height="25px" class="f-ing_svg">
+                        <use href="././img/sprite.svg/#icon-heart"></use>
+                    </svg>
                 </button>
             </div>
+
         </div>
 
         <div class="f-ing_items">
             <h3 class="f-ing_subtitle">Blanco tequila</h3>
             <p class="f-ing_text">Distilled beverage</p>
-            <div class="f-ing_btn">
-                <button type="button" сlass="f-ing_btn-add">
-                    <p>Learn More</p>
-                </button>
 
-                <button type="button" сlass="f-ing_btn-rem">
-                    <p>Remove</p>
+            <div class="f-ing_btn">
+                <button type="button" class="f-ing_btn-add">Learn More</button>
+
+
+                <button type="button" class="f-ing_btn-rem">Remove
+                    <svg width="25px" height="25px" class="f-ing_svg">
+                        <use href="././img/sprite.svg/#icon-heart"></use>
+                    </svg>
                 </button>
             </div>
         </div>
@@ -37,14 +42,16 @@
             <h3 class="f-ing_subtitle">Vermouth</h3>
             <p class="f-ing_text">fortified wine</p>
             <div class="f-ing_btn">
-                <button type="button" сlass="f-ing_btn-add">
-                    <p>Learn More</p>
-                </button>
+                <button type="button" class="f-ing_btn-add">Learn More</button>
 
-                <button type="button" сlass="f-ing_btn-rem">
-                    <p>Remove</p>
+
+                <button type="button" class="f-ing_btn-rem">Remove
+                    <svg width="25px" height="25px" class="f-ing_svg">
+                        <use href="././img/sprite.svg/#icon-heart"></use>
+                    </svg>
                 </button>
             </div>
+
         </div>
     </div>
 </section>
