--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -185,6 +185,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 
   padding: 0;
   width: 110px;
@@ -216,8 +217,12 @@
 }
 
 .btn__svg-fav {
+  display: block;
   fill: #fe7031;
+  width: 30px;
+  height: 30px;
 }
+
 // ======= PRELOADER =======
 
 .preloader {
