--- a/src/sass/favorite/_favorite.scss
+++ b/src/sass/favorite/_favorite.scss
@@ -185,6 +185,7 @@
   line-height: 1.71;
   letter-spacing: 0.02em;
   color: #fd5103;
+  gap: 5px;
 
   @media screen and (min-width: 768px) {
     width: 123px;
