--- a/src/sass/components/_modal-coctails.scss
+++ b/src/sass/components/_modal-coctails.scss
@@ -52,6 +52,11 @@
     // height: 280px;
     border-radius: 4px;
     margin-bottom: 22px;
+
+    @media (min-width: 768px)  {
+        width: 288px;
+        height: 320px;
+    }
 }
 
 
@@ -142,10 +147,63 @@
     letter-spacing: 0.02em;
     color: white;
     border: transparent;
+    border-radius: 4px;
+    text-align: center;
+      
+        
+    
+
+  
+        
+    
 
     
 }
 
 .ingredient__accent {
     color:#000917;
+}
+
+.cocktail__modal-btn {
+    @media (min-width: 768px) {
+        justify-content: flex-end;
+        margin-bottom: 28px;
+        margin-right: 28px;
+        display: flex;
+
+    }
+}
+
+.instraction__wrap {
+    @media (min-width: 768px) {
+           margin-left: 28px;
+            
+    
+        }
+}
+
+.cocktail__title {
+    @media (min-width: 768px) {
+           margin-bottom: 24px;
+    
+    
+        }
+}
+
+.ingredients__wraper {
+    @media (min-width: 768px) {
+           display: flex;
+    
+    
+        }
+}
+
+.recipe__wrapper {
+    @media (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+    
+    
+    }
+
 }
